<resources>
    <string name="app_name">EvTask</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="registration">REGISTRATION</string>
    <string name="name">NAME</string>
    <string name="email_id">EMAIL ID</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="rpassword">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="welcome">Welcome</string>
</resources>